--------------------------------------------------------------------------------
drkns 25.03.2021 22:23:45 +0000 - build 5769

1. gh-368: Cannot copy to network share (samba).

--------------------------------------------------------------------------------
drkns 23.03.2021 17:59:39 +0000 - build 5768

1. 0003853: Slow file copying

--------------------------------------------------------------------------------
drkns 21.03.2021 19:15:26 +0000 - build 5767

1. Another attempt to keep the main thread COM-free (most of the time).

--------------------------------------------------------------------------------
drkns 21.03.2021 15:03:52 +0000 - build 5766

1. Revert 5764.1 - the experiment wasn't successful.

--------------------------------------------------------------------------------
drkns 21.03.2021 03:40:44 +0000 - build 5765

1. 0003852: an alternative (and, hopefully, better) way to approximate truecolor to console index.

--------------------------------------------------------------------------------
drkns 20.03.2021 23:22:21 +0000 - build 5764

1. Move COM MTA initialisation into a separate thread to allow plugins to have STA in the main thread.

2. A few minor fixes.

--------------------------------------------------------------------------------
svs 17.03.2021 16:39:34 +0300 - build 5763

1. SQLite 3.35.1

--------------------------------------------------------------------------------
drkns 16.03.2021 23:05:27 +0000 - build 5762

1. Continuation of 5761.

--------------------------------------------------------------------------------
drkns 15.03.2021 18:31:13 +0000 - build 5761

1. Fix stack tracing on 2k/XP.

--------------------------------------------------------------------------------
svs 14.03.2021 23:34:34 +0300 - build 5760

1. SQLite 3.35.0

--------------------------------------------------------------------------------
drkns 14.03.2021 16:53:28 +0000 - build 5759

1. VS2019 & 2k/XP compatibility.
