@@ -1,4 +1,9 @@
 --------------------------------------------------------------------------------
+drkns 26.03.2021 23:07:38 +0000 - build 5770
+
+1. 0003855: Cannot rename symlinks
+
+--------------------------------------------------------------------------------
 drkns 25.03.2021 22:23:45 +0000 - build 5769
 
 1. gh-368: Cannot copy to network share (samba).
